kubernetes/apps/monitoring-system/grafana/mcp/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.noirprime.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &name grafana-mcp
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: mdi-database-search-outline
    gethomepage.dev/name: Grafana-MCP
    gethomepage.dev/group: Observability
spec:
  hostnames: ["grafana-mcp.noirprime.com"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: *name
          namespace: monitoring-system
          port: 8000
